--- a/index.html
+++ b/index.html
@@ -3,18 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>540b659e-2c04-4c0e-b996-b0b6f1abd637</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>lifesight</title>
+    <meta name="description" content="Lifesight" />
+    <meta name="author" content="Lifesight" />
 
-    <meta property="og:title" content="540b659e-2c04-4c0e-b996-b0b6f1abd637" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="lifesight" />
+    <meta property="og:description" content="Lifesight Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
